# CreepyEngine

./: .gitignore  README.md
Editor/: CMakeLists.txt
Editor/include/Editor/: EditorLayer.hpp
Editor/include/Panel/: ContentBrowserPanel.hpp  SceneHierarchyPanel.hpp
Editor/src/: CreepyEditor.cpp
Editor/src/Editor/: EditorLayer.cpp
Editor/src/Panel/: ContentBrowserPanel.cpp  SceneHierarchyPanel.cpp
Engine/: CMakeLists.txt
Engine/include/: CreepyEngine.hpp
Engine/include/Coral/: Assembly.hpp  Attribute.hpp  CoralPCH.hpp  Core.hpp  FieldInfo.hpp  GC.hpp  HostInstance.hpp  MessageLevel.hpp  PropertyInfo.hpp  StableVector.hpp  String.hpp  TypeCache.hpp  Verify.hpp
Engine/include/CreepyEngine/: Application.hpp  Core.hpp  EntryPoint.hpp  Input.hpp  Layer.hpp  Window.hpp
Engine/include/CreepyEngine/Controller/: OrthographicCameraController.hpp
Engine/include/CreepyEngine/Core/: Application.hpp  Buffer.hpp  Core.hpp  EntryPoint.hpp  Input.hpp  KeyCode.hpp  Layer.hpp  LayerStack.hpp  Log.hpp  MouseButtonCode.hpp  TimeStep.hpp  UUID.hpp  Window.hpp
Engine/include/CreepyEngine/Debug/: ErrorHandle.hpp  ImGuiLayer.hpp  Instrumentor.hpp
Engine/include/CreepyEngine/Events/: ApplicationEvent.hpp  Event.hpp  KeyEvent.hpp  MouseEvent.hpp
Engine/include/CreepyEngine/Math/: Math.hpp
Engine/include/CreepyEngine/Physics/: PhysicWorld.hpp
Engine/include/CreepyEngine/Project/: Project.hpp  ProjectSerializer.hpp
Engine/include/CreepyEngine/Reflection/: ReflectionCore.hpp  ReflectionType.hpp
Engine/include/CreepyEngine/Renderer/: Buffer.hpp  Camera.hpp  Descriptor.hpp  EditorCamera.hpp  FrameBuffer.hpp  GraphicContext.hpp  Mesh.hpp  Model.hpp  OrthographicCamera.hpp  Pipeline.hpp  RenderCommand.hpp  Renderer.hpp  Renderer2D.hpp  RendererAPI.hpp  Shader.hpp  SubTexture2D.hpp  Texture.hpp  UniformBuffer.hpp  VertexArray.hpp
Engine/include/CreepyEngine/Scene/: Components.hpp  Entity.hpp  Scene.hpp  SceneAddComponent.hpp  SceneCamera.hpp  SceneSerializer.hpp  ScriptableEntity.hpp
Engine/include/CreepyEngine/Scripting/: ScriptEngine.hpp  ScriptGlue.hpp
Engine/include/CreepyEngine/Utils/: ConceptUtils.hpp  FrameBufferUtils.hpp  ModelImporterUtils.hpp  PlatformUtils.hpp  SceneSerializerUtils.hpp  ScriptEngineUtils.hpp  TypesUtils.hpp  VulkanUtils.hpp
Engine/include/FileWatcher/: FileWatcher.hpp
Engine/include/Platform/OpenGL/: OpenGLBuffer.hpp  OpenGLContext.hpp  OpenGLFrameBuffer.hpp  OpenGLRendererAPI.hpp  OpenGLShader.hpp  OpenGLTexture.hpp  OpenGLUniformBuffer.hpp  OpenGLVertexArray.hpp
Engine/include/Platform/Vulkan/: VulkanAllocator.hpp  VulkanBuffer.hpp  VulkanCommandBuffer.hpp  VulkanContext.hpp  VulkanDescriptor.hpp  VulkanDevice.hpp  VulkanFence.hpp  VulkanFrameBuffer.hpp  VulkanImage.hpp  VulkanPipeline.hpp  VulkanRenderPass.hpp  VulkanRendererAPI.hpp  VulkanShader.hpp  VulkanSwapchain.hpp  VulkanTypes.hpp  VulkanUniformBuffer.hpp
Engine/include/Platform/Windows/: WindowsInput.hpp  WindowsWindow.hpp
Engine/include/Platform2/OpenGL/: OpenGLBuffer.hpp  OpenGLContext.hpp  OpenGLFrameBuffer.hpp  OpenGLShader.hpp  OpenGLTexture.hpp  OpenGLUniformBuffer.hpp
Engine/include/Platform2/Vulkan/: VulkanBuffer.hpp
Engine/include/VulkanBootstrap/: VkBootstrap.hpp
Engine/include/glad/: glad.h
Engine/include/glm/: glm.hpp
Engine/include/imgui/: GraphEditor.hpp  ImCurveEdit.hpp  ImGuizmo.hpp  imgui.hpp  imgui_impl_glfw.hpp  imgui_impl_opengl3.hpp  imgui_impl_vulkan.hpp  imgui_internal.hpp  imgui_stdlib.h  imgui_stdlib.hpp
Engine/include/reactphysics3d/utils/: DebugRenderer.h
Engine/include/tracy/client/: TracyCallstack.h  TracyCallstack.hpp  TracyFastVector.hpp  TracyLock.hpp  TracyProfiler.hpp  TracyScoped.hpp  TracyStringHelpers.hpp  TracySysTrace.hpp  tracy_SPSCQueue.h  tracy_concurrentqueue.h  tracy_rpmalloc.hpp
Engine/include/tracy/common/: TracyAlloc.hpp
Engine/include/tracy/tracycore/: Tracy.hpp  TracyC.h  TracyD3D11.hpp  TracyD3D12.hpp  TracyLua.hpp  TracyOpenCL.hpp  TracyOpenGL.hpp  TracyVulkan.hpp
Engine/include/yaml-cpp/: yaml_ex.hpp
Engine/src/Coral/: Assembly.cpp  Attribute.cpp  FieldInfo.cpp  GC.cpp  HostInstance.cpp  ManagedObject.cpp  Memory.cpp  MethodInfo.cpp  PropertyInfo.cpp  String.cpp  StringHelper.cpp  Type.cpp  TypeCache.cpp
Engine/src/CreepyEngine/: Application.cpp  Layer.cpp  LayerStack.cpp  Log.cpp
Engine/src/CreepyEngine/Controller/: OrthographicCameraController.cpp
Engine/src/CreepyEngine/Core/: Application.cpp  Layer.cpp  LayerStack.cpp  Log.cpp  UUID.cpp
Engine/src/CreepyEngine/Debug/: ImGuiLayer.cpp
Engine/src/CreepyEngine/Events/: ApplicationEvent.cpp  KeyEvent.cpp  MouseEvent.cpp
Engine/src/CreepyEngine/Math/: Math.cpp
Engine/src/CreepyEngine/Physics/: PhysicWorld.cpp
Engine/src/CreepyEngine/Project/: Project.cpp  ProjectSerializer.cpp
Engine/src/CreepyEngine/Renderer/: Buffer.cpp  Camera.cpp  EditorCamera.cpp  FrameBuffer.cpp  Mesh.cpp  Model.cpp  OrthographicCamera.cpp  RenderCommand.cpp  Renderer.cpp  Renderer2D.cpp  RendererAPI.cpp  Shader.cpp  SubTexture2D.cpp  Texture.cpp  UniformBuffer.cpp  VertexArray.cpp
Engine/src/CreepyEngine/Scene/: Entity.cpp  Scene.cpp  SceneAddComponents.cpp  SceneCamera.cpp  SceneSerializer.cpp
Engine/src/CreepyEngine/Scripting/: ScriptEngine.cpp  ScriptGlue.cpp
Engine/src/CreepyEngine/Utils/: ModelImporterUtils.cpp  VulkanUtils.cpp
Engine/src/Extended/yaml-cpp/: yaml_ex.cpp
Engine/src/Platform/OpenGL/: OpenGLBuffer.cpp  OpenGLContext.cpp  OpenGLFrameBuffer.cpp  OpenGLRendererAPI.cpp  OpenGLShader.cpp  OpenGLTexture.cpp  OpenGLUniformBuffer.cpp  (+1 more)
Engine/src/VulkanBootstrap/: VkBootstrap.cpp
Engine/src/VulkanMemoryAllocator/: vk_mem_alloc.cpp
Engine/src/glad/: glad.c
Engine/src/imgui/: GraphEditor.cpp  ImCurveEdit.cpp  ImGradient.cpp  ImGuizmo.cpp  ImSequencer.cpp  imgui.cpp  imgui_draw.cpp  imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp  imgui_impl_vulkan.cpp  imgui_stdlib.cpp  imgui_tables.cpp  imgui_widgets.cpp
Sandbox/: CMakeLists.txt
Sandbox/include/Core/: Sandbox2D.hpp
Sandbox/src/: Application.cpp
Sandbox/src/Core/: Sandbox2D.cpp
(+75 files in other folders)
